[package]
name = "balatro-engine"
version = "0.1.0"
edition = "2021"
authors = ["Balatro AI Team"]
description = "A Rust implementation of the Balatro card game engine"
license = "MIT"
repository = "https://github.com/balatro-ai/balatro-engine"

[lib]
name = "balatro_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Collections and utilities
indexmap = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Python bindings (optional)
pyo3 = { version = "0.21", features = ["auto-initialize", "extension-module"], optional = true }
pyo3-build-config = { version = "0.21", optional = true }

# Optional: For future GUI/display features
# bevy = "0.12"  # Uncomment when ready for graphics
# ratatui = "0.24"  # Uncomment for terminal UI

[features]
default = []
python = ["pyo3", "pyo3-build-config"]

[build-dependencies]
pyo3-build-config = { version = "0.21", optional = true }

[dev-dependencies]
criterion = "0.5"

[profile.dev]
opt-level = 0
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"