[project]
name = "pylatro-ai"
version = "0.1.0"
description = "Python bindings and tests for balatro-engine"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    # RL Framework dependencies
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "optuna>=3.0.0",
    "ray[rllib,tune]>=2.8.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",  # Required for WandB tensorboard syncing
    # Optional: JAX-based simulation (Brax)
    "brax>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicitly specify only the actual package to avoid auto-discovery issues
# with directories like logs/, wandb/, models/ that aren't packages
packages = ["pylatro_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=pylatro_ai --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

